change price display.
Co-authored-by: jwtill <jwtill@users.noreply.github.com>

--- a/CarDealership/Views/Cars/Index.cshtml
+++ b/CarDealership/Views/Cars/Index.cshtml
@@ -18,7 +18,7 @@
       <ul>
         @foreach (Car automobile in Model)
         {
-          <li>@automobile.MakeModel, Price $: @automobile.Price, Miles: @automobile.Miles</li>
+          <li>@automobile.MakeModel, Price: $@automobile.Price, Miles: @automobile.Miles</li>
         }
       </ul>
       <a href="/cars/new">Add Another Car</a>
