add discount functionality.
Co-authored-by: jwtill <jwtill@users.noreply.github.com>

--- a/CarDealership/Views/Cars/Index.cshtml
+++ b/CarDealership/Views/Cars/Index.cshtml
@@ -21,7 +21,7 @@
           <li>@automobile.MakeModel, Price: $@automobile.Price, Miles: @automobile.Miles</li>
         }
       </ul>
-      <a href="/cars/new">Add Another Car</a>
-    </div>
+      <a href="/cars/new">Add Another Car</a><br>
+      <a href="/discount">Discount Cars</a>
   </body>
 </html>
